--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,26 +1,121 @@
 {%- extends 'base.html' -%}
 
-{% block head_base %}
-<script src='https://kit.fontawesome.com/c7696f239a.js' crossorigin='anonymous'></script>
-{% endblock %}
+{%- block head_base -%}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/login.css') }}">
+{%- endblock -%}
+
 
 {%- block body_base -%}
-<form action='/login' method='POST' class='w3-container w3-card-4 w3-light-grey w3-text-green w3-margin'>
-	<h2 class='w3-center'>Login</h2>
-		
-	<div class='w3-row w3-section'>
-		<div class='w3-col' style='width:50px'><i class='w3-xxlarge fa fa-user' style='{%- if error -%}color:red{%- else -%}color:green{%- endif -%}'></i></div>
-		<div class='w3-rest'>
-			<input class='w3-input w3-border' required=True name='email' type='text' placeholder='email'>
-		</div>
-	</div>
-	<div class='w3-row w3-section'>
-		<div class='w3-col' style='width:50px'><i class='w3-xxlarge fa-solid fa-lock' style='{%- if error -%}color:red{%- else -%}color:green{%- endif -%}'></i></div>
-		<div class='w3-rest'>
-			<input class='w3-input w3-border' required=True name='pwd' type='password' placeholder='pwd'>
-		</div>
-	</div>
 
-	<button class='w3-button w3-hoverable w3-block w3-section w3-green w3-hover-black w3-ripple w3-padding'>Log in</button>
-</form>
+<div class="row">
+	<div class="col s12">
+		<div class="card white">
+			<div class=" card-content black-text">
+
+				<div class="row">
+					<div class="col s12">
+						<ul class="tabs tabs-fixed-width deep-orange darken-3">
+							<li class="tab col s3"><a class="active white-text" href="#login">Login</a></li>
+							<li class="tab col s3"><a class="white-text" href="#registrati">Registrati</a></li>
+						</ul>
+					</div>
+
+					<div id="login" class="col s12">
+
+						<div>
+							<div class="row">
+								<form class="col s12">
+									<div class="row">
+										<div class="input-field col s6">
+											<input id="email" type="text" class="validate">
+											<label for="email">Email</label>
+										</div>
+										<div class="input-field col s6">
+											<input id="pwd" type="password" class="validate">
+											<label for="pwd">Password</label>
+										</div>
+									</div>
+								</form>
+							</div>
+						</div>
+
+						<div>
+							<a class="waves-effect waves-light btn deep-orange darken-3 right">Login</a>
+						</div>
+
+					</div>
+
+					<div id="registrati" class="col s12">
+
+						<div>
+							<div class="row">
+								<form class="col s12">
+									<div class="row">
+										<div class="input-field col s6">
+											<input placeholder="Placeholder" id="first_name" type="text"
+												class="validate">
+											<label for="first_name">First Name</label>
+										</div>
+										<div class="input-field col s6">
+											<input id="last_name" type="text" class="validate">
+											<label for="last_name">Last Name</label>
+										</div>
+									</div>
+									<div class="row">
+										<div class="input-field col s12">
+											<input disabled value="I am not editable" id="disabled" type="text"
+												class="validate">
+											<label for="disabled">Disabled</label>
+										</div>
+									</div>
+									<div class="row">
+										<div class="input-field col s12">
+											<input id="password" type="password" class="validate">
+											<label for="password">Password</label>
+										</div>
+									</div>
+									<div class="row">
+										<div class="input-field col s12">
+											<input id="email" type="email" class="validate">
+											<label for="email">Email</label>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col s12">
+											This is an inline input field:
+											<div class="input-field inline">
+												<input id="email_inline" type="email" class="validate">
+												<label for="email_inline">Email</label>
+												<span class="helper-text" data-error="wrong" data-success="right">Helper
+													text</span>
+											</div>
+										</div>
+									</div>
+								</form>
+							</div>
+
+						</div>
+						<div>
+
+							<a class="waves-effect waves-light btn deep-orange darken-3 right">Registrati</a>
+
+						</div>
+
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+
+{%- endblock -%}
+
+
+
+
+{%- block base_javascript -%}
+<script src="{{ url_for('static',filename='javascript/login.js') }}"></script>
 {%- endblock -%}
