--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,7 @@
+{% set active_page = 'home.index' %}
 {%- extends 'base.html' -%}
 
 {%- block body_base -%}
 <h2>Hi {{ name }}</h2>
 {%- endblock -%}
+
