--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,10 +31,16 @@
 			<div class="nav-wrapper container">
 				<a href="" class="brand-logo">DREAM TEAM - PROGETTO</a>
 				<ul class="right hide-on-med-and-down">
-					<li><a href="">Home</a></li>
-					<li><a href="">Corsi</a></li>
-					<li><a href="">Lezioni</a></li>
-					<li class="active"><a href="">Login</a></li>
+					<li {% if active_page == 'home.index' %} class='active' {% endif %}><a href="/home">Home</a></li>
+					<li {% if active_page == 'corsi.index' %} class='active' {% endif %}><a href="/home">Corsi</a></li>
+					<li {% if active_page == 'lezioni.index' %} class='active' {% endif %}><a href="">Lezioni</a></li>
+					<li {% if active_page == 'login.index' %} class='active' {% endif %}><a href="">
+						{%- if authenticated -%}
+						Hi, {{ name }}
+						{%- else -%}
+						Login
+						{%- endif -%}
+					</a></li>
 				</ul>
 			</div>
 		</nav>
