--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,7 +1,22 @@
 {% set active_page = 'home.index' %}
 {%- extends 'base.html' -%}
 
+{%- block head_base -%}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/home.css') }}">
+{%- endblock -%}
+
 {%- block body_base -%}
-<h2>Hi {{ name }}</h2>
+
+<!--img class="sfondo_bg" src="{{ url_for('static',filename='styles/images/Home_bg.jpg') }}"-->
+
+<div>
+    
+    <img class="sfondo_bg" src="{{ url_for('static',filename='styles/images/Home_bg.jpg') }}">
+    <div class="testo_foto">
+        <h2>Hi {{ name }}</h2>
+    </div>
+</div>
+
+
 {%- endblock -%}
 
