--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -13,10 +13,9 @@
     
     <img class="sfondo_bg" src="{{ url_for('static',filename='styles/images/Home_bg.jpg') }}">
     <div class="testo_foto">
-        <h2>Hi {{ name }}</h2>
+        <h2>Hi {{ name }}, your mum and your sister work in the traffic</h2>
     </div>
 </div>
-
 
 {%- endblock -%}
 
