--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -19,3 +19,6 @@
 
 {%- endblock -%}
 
+{%- block base_javascript -%}
+<script src="{{ url_for('static',filename='javascript/home.js') }}"></script>
+{%- endblock -%}
