--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,7 +9,7 @@
 {%- block body_base -%}
 
 <div class="row">
-	<div class="col s12">
+	<div class="col s8 offset-s2">
 		<div class="card white">
 			<div class=" card-content black-text">
 
