--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -57,7 +57,7 @@
 
 						<div>
 							<div class="row">
-								<form class="col s12", action="/registrazione", method="POST">
+								<form class="col s12" action="/registrazione" method="POST">
 									<div class="row">
 										<!--<div class="input-field col s6">
 											<input placeholder="Placeholder" name="nome" id="first_name" type="text"
