--- a/app/static/styles/login.css
+++ b/app/static/styles/login.css
@@ -35,7 +35,8 @@
 }
 
 /* invalid color */
-.input-field input[type=text].invalid {
+.input-field input[type=text].invalid,
+.input-field input[type=email].invalid {
     border-bottom: 1px solid rgb(255, 0, 0);
     box-shadow: 0 1px 0 0 #000;
 }
