--- a/app/templates/form_element.html
+++ b/app/templates/form_element.html
@@ -15,9 +15,15 @@
 		{%- elif element.isDate -%}			"date"
 		{%- elif element.isDatetime -%}		"datetime-local"
 		{%- elif element.isTimedelta -%}	"time"
-		{%- else -%}"text"{%- endif -%} 
+		{%- else -%}						"text"
+		{%- endif %} 
 		class="validate"
 		{% if not element.optional %}required=True{% endif %}
 	>
 	<label for={{ element.name }}>{{ element.displayName }}</label>
+	{%- if input_error -%}
+		{%- if element.name == input_error.elementName -%}
+		<span class="helper-text" data-error="wrong" data-success="right">{{ input_error.message }}</span>
+		{%- endif -%}
+	{%- endif -%}
 {%- endif -%}
