--- a/app/templates/corsi.html
+++ b/app/templates/corsi.html
@@ -54,4 +54,5 @@
 
 {%- block base_javascript -%}
 <script src="{{ url_for('static',filename='javascript/corsi.js') }}"></script>
+<script src="{{ url_for('static',filename='javascript/corso_elem.js') }}"></script>
 {%- endblock -%}
