--- a/app/templates/corso_elem.html
+++ b/app/templates/corso_elem.html
@@ -2,7 +2,6 @@
     <div class="collapsible-header" style="display: block;">
         {{ corso.titolo }}
         <div class="right">
-            <i class="btn material-icons">edit</i>
             <i class="material-icons">expand_more</i>
         </div>
     </div>
@@ -13,20 +12,28 @@
                     {{ corso.descrizione }}
                 </div>
                 {%- if authenticated -%}
-                    {%- if corso in i_tuoi_corsi -%}
-                    <form action="/disiscrizione_corso" method="POST">
-                        <input name="idcorso" type="number" style="display:none" value="{{ corso.id }}">
-                        <button class="waves-effect waves-light btn deep-orange darken-3 right" type="submit">
-                            Disiscriviti
+                    {%- if is_docente -%}
+                        {%- if corso in i_tuoi_corsi -%}
+                        <button class="waves-effect waves-light btn deep-orange darken-3 right" onclick="hideOrShowForm(EventTarget)">
+                            Modifica
                         </button>
-                    </form>
+                        {%- endif -%}
                     {%- else -%}
-                    <form action="/iscrizione_corso" method="POST">
-                        <input name="idcorso" type="number" style="display:none" value="{{ corso.id }}">
-                        <button class="waves-effect waves-light btn deep-orange darken-3 right" type="submit">
-                            Iscriviti
-                        </button>
-                    </form>
+                        {%- if corso in i_tuoi_corsi -%}
+                        <form action="/disiscrizione_corso" method="POST">
+                            <input name="idcorso" type="number" style="display:none" value="{{ corso.id }}">
+                            <button class="waves-effect waves-light btn deep-orange darken-3 right" type="submit">
+                                Disiscriviti
+                            </button>
+                        </form>
+                        {%- else -%}
+                        <form action="/iscrizione_corso" method="POST">
+                            <input name="idcorso" type="number" style="display:none" value="{{ corso.id }}">
+                            <button class="waves-effect waves-light btn deep-orange darken-3 right" type="submit">
+                                Iscriviti
+                            </button>
+                        </form>
+                        {%- endif -%}
                     {%- endif -%}
                 {%- endif -%}
 
