--- a/app/templates/form_element.html
+++ b/app/templates/form_element.html
@@ -17,7 +17,7 @@
 		{%- elif element.isTimedelta -%}	"time"
 		{%- else -%}						"text"
 		{%- endif %} 
-		class="validate"
+		class="validate {%- elif element.isDatetime %} active{%- endif -%}"
 		{% if not element.optional %}required=True{% endif %}
 	>
 	<label for={{ element.name }}>{{ element.displayName }}</label>
