--- a/app/templates/corso_elem.html
+++ b/app/templates/corso_elem.html
@@ -9,14 +9,56 @@
         <div class="row" style="margin-bottom: 0px;">
             <div class="col s11 offset-s1">
                 <div class="row">
-                    {{ corso.descrizione }}
+                    <div><div class="col s2"><b>Descrizione:</b></div><div class="col s10">{{ corso.descrizione }}</div></div>
+                    <div><div class="col s4"><b>Categoria:</b></div><div class="col s8">{{ corso.categoria }}</div></div>
+                    <div><div class="col s4"><b>Durata corso:</b></div><div class="col s8">{{ corso.durata }}</div></div>
+                    <div><div class="col s4"><b>Periodo:</b></div><div class="col s8">{{ corso.periodo }}</div></div>
+                    <div><div class="col s4"><b>Modalità:</b></div><div class="col s8">{{ corso.modalità }}</div></div>
+                    <div><div class="col s4"><b>Dipartimento:</b></div><div class="col s8">{{ corso.iddipartimento }}</div></div>
+                    <div><div class="col s4"><b>Data inizio iscrizioni:</b></div><div class="col s8">{{ corso.inizioiscrizioni }}</div></div>
+                    <div><div class="col s4"><b>Data scadenza iscrizioni:</b></div><div class="col s8">{{ corso.scadenzaiscrizioni }}</div></div>
+                    <div><div class="col s4"><b>Posti totali:</b></div><div class="col s8">{{ corso.iscrizionimassime }}</div></div>
+                    <div><div class="col s4"><b>Posti rimanenti:</b></div><div class="col s8">DA CAMBIARE</div></div>
+                    <div><div class="col s4"><b>Posti minimi:</b></div><div class="col s8">{{ corso.iscrizioniminime }}</div></div>
+                    <div><div class="col s4"><b>Studenti iscritti:</b></div><div class="col s8">DA CAMBIARE</div></div>
                 </div>
+
+                <div class="row" style="display: none;">
+                    <form class="col s12" action="/test" method="POST">
+                        {%- for element in attrList.values() -%}
+                        {%- if element.insertable -%}
+                        <div class="row">
+                            <div class="input-field col s8">
+                                {%- include "form_element.html" -%}
+                            </div>
+                        </div>
+                        {%- endif -%}
+                        {%- endfor -%}
+
+                    </form>
+                </div>
+
+
+
+
                 {%- if authenticated -%}
                     {%- if is_docente -%}
                         {%- if corso in i_tuoi_corsi -%}
-                        <button class="waves-effect waves-light btn deep-orange darken-3 right" onclick="hideOrShowForm(EventTarget)">
-                            Modifica
-                        </button>
+                            <div>
+                                <div class="right" style="display: block;">
+                                    <button class="waves-effect waves-light btn deep-orange darken-3" onclick="hideOrShowForm(event)">
+                                        Modifica
+                                    </button>
+                                </div>
+                                <div class="right" style="display: none;">
+                                    <button class="waves-effect waves-light btn deep-orange darken-3" onclick="hideOrShowForm(event)">
+                                        Annulla
+                                    </button>
+                                    <button class="waves-effect waves-light btn deep-orange darken-3" onclick="hideOrShowForm(event)">
+                                        Salva modifiche
+                                    </button>
+                                </div>
+                            </div>
                         {%- endif -%}
                     {%- else -%}
                         {%- if corso in i_tuoi_corsi -%}
