--- a/app/templates/form_element.html
+++ b/app/templates/form_element.html
@@ -17,13 +17,13 @@
 		{%- elif element.isTimedelta -%}	"time"
 		{%- else -%}						"text"
 		{%- endif %} 
-		class="validate {%- elif element.isDatetime %} active{%- endif -%}"
+		class="validate"
 		{% if not element.optional %}required=True{% endif %}
 	>
-	<label for={{ element.name }}>{{ element.displayName }}</label>
+	<label {%- if element.isDatetime %} class="active" {%- endif %} for={{ element.name }}>{{ element.displayName }}</label>
 	{%- if input_error -%}
 		{%- if element.name == input_error.elementName -%}
-		<span class="helper-text {%- if element.isDatetime %} active{%- endif -%}" data-error="wrong" data-success="right">{{ input_error.message }}</span>
+		<span class="helper-text" data-error="wrong" data-success="right">{{ input_error.message }}</span>
 		{%- endif -%}
 	{%- endif -%}
 {%- endif -%}
