--- a/app/templates/corso_elem.html
+++ b/app/templates/corso_elem.html
@@ -51,15 +51,15 @@
                         {%- if corso in i_tuoi_corsi -%}
                             <div>
                                 <div class="right" style="display: block;">
-                                    <button class="waves-effect waves-light btn deep-orange darken-3" onclick="hideOrShowForm(event)">
+                                    <button class="waves-effect waves-light btn deep-orange darken-3" onclick="hideOrShowFormModificaCorso(event)">
                                         Modifica
                                     </button>
                                 </div>
                                 <div class="right" style="display: none;">
-                                    <button class="waves-effect waves-light btn deep-orange darken-3" onclick="hideOrShowForm(event)">
+                                    <button class="waves-effect waves-light btn deep-orange darken-3" onclick="hideOrShowFormModificaCorso(event)">
                                         Annulla
                                     </button>
-                                    <button type="submit" form="{{ corso.id }}" class="waves-effect waves-light btn deep-orange darken-3" onclick="hideOrShowForm(event)">
+                                    <button type="submit" form="{{ corso.id }}" class="waves-effect waves-light btn deep-orange darken-3" onclick="hideOrShowFormModificaCorso(event)">
                                         Salva modifiche
                                     </button>
                                 </div>
