--- a/app/templates/lezioni.html
+++ b/app/templates/lezioni.html
@@ -15,12 +15,66 @@
 <div class="row">
     <div class="col s8 offset-s2">
         
-        <h2>Lezioni</h2>
+        
+        {%- if mostra_lezioni -%}
+            <br><br>    
+        
+            {%- if lezioni -%}
+                Torna <a href="/lezioni">indietro</a>
+                <h3>Elenco delle lezioni di {{ titolo_corso }}</h3>
+             
+                {% for lezione in lezioni %}
+       
+                    
+                    <div class="col s11 offset-s1" >
+                        <div class="row" >
+    
+                            <div><div class="col s4"><b>Aula:</b></div><div class="col s8">{{ lezione.idaula}}</div></div>
+                            <div><div class="col s4"><b>Inizio:</b></div><div class="col s8">{{ lezione.inizio }}</div></div>
+                            <div><div class="col s4"><b>Durata:</b></div><div class="col s8">{{ lezione.durata }}</div></div>
+                            <div><div class="col s4"><b>Modalità:</b></div><div class="col s8">{{ lezione.modalità }}</div></div>
+                            
+                        
+                        </div>
+                    </div>
+              
 
-        <h3>Elenco delle lezioni</h3>
+                {% endfor %}
 
+            {%- else -%}       
+            <div class="col s11 offset-s1" >
+                <div class="row" >
+                    <b>Nessuna lezione disponibile,</b> torna <a href="/lezioni">indietro</a>
+                </div>
+            </div>
+            {%- endif -%}
+        {%- else -%}    
+           
+            
+            <h2>Lezioni</h2>
 
+       
+            {% for corso in i_tuoi_corsi %}
+            <div class="collapsible-header" style="display: block;">
+                {{ corso.titolo }}
+                <div class="right">
+                    <form action="/mostra_lezioni" method="POST">
+                        <input name="idcorso" type="number" style="display:none" value="{{ corso.id }}">
+                        <input name="titolo" type="text" style="display:none" value="{{ corso.titolo }}">
+                        <button class="waves-effect waves-light btn deep-orange darken-3 right" type="submit">
+                            mostra lezioni
+                        </button>
 
+                    </form>
+                
+                </div>
+            </div>
+
+            {% endfor %}
+        {%- endif -%}
+                
+                
+ 
     </div>
 </div>
 
