--- a/app/templates/lezioni_elem.html
+++ b/app/templates/lezioni_elem.html
@@ -7,7 +7,7 @@
            
                   
                     <div><div class="col s11">
-                    <div class="deep-orange darken-3 left" style="color: white;">
+                    <div class="deep-orange darken-3 left" style="padding: 5px; color: white;">
                     {{ lezione[0].titolo }}
                 
                     </div>
@@ -20,7 +20,7 @@
                     <div><div class="col s4"><b>Inizio:</b></div><div class="col s8">{{ lezione[1].inizio }}</div></div>
                     <div><div class="col s4"><b>Durata:</b></div><div class="col s8">{{ lezione[1].durata }}</div></div>
                     <div><div class="col s4"><b>Modalità:</b>  <br><hr>
-                    </div><div class="col s8">{{ lezione[0].modalità }}  <br><hr>
+                    </div><div class="col s8">{{ lezione[1].modalità }}  <br><hr>
                     </div></div>
 
                 
