--- a/app/templates/form_element.html
+++ b/app/templates/form_element.html
@@ -2,10 +2,21 @@
 	<select name={{ class_name }}.{{ element.name }}>
 		<option value="" disabled selected>{{ element.displayName }}</option>
 		{%- for pk, displayName in element.options.items() -%}
+			{%- if element.displayName == "aula" -%}
+				<option  disabled selected>aula virtuale</option>
+			{%- endif -%}
 			<option value="{{ pk }}" {% if corso and corso[element.name] == pk -%}selected="selected"{%- endif -%}>{{ displayName }}</option>
-		{%- endfor -%}
+		
+	
+		
+			{%- endfor -%}
+
+
+	
+		
 	</select>
 	<label>{{ element.displayName }}</label>
+
 {%- else -%}
 	<input 
 		id={{ element.name }} 
