--- a/app/templates/lezioni.html
+++ b/app/templates/lezioni.html
@@ -13,7 +13,55 @@
     <div class="col s8 offset-s2">
               
         <h2>Lezioni</h2>
-          
+        {%- if is_docente -%}
+        
+
+        <div>
+
+            <ul class="collapsible expandable popout">
+                
+                <li>
+                    <div class="collapsible-header" style="display: block;">
+                        Inserisci nuova lezione
+                        <div class="right">
+                            <i class="material-icons">expand_more</i>
+                        </div>
+                    </div>
+                    <div class="collapsible-body">
+                        <div class="row" style="margin-bottom: 0px;">
+                            <div class="col s11 offset-s1">                
+                                <div class="row">
+                                    {%- set class_name = 'Lezioni' -%}
+                                    <form id="inserisci_nuova_lezione" class="col s12" action="/insert" method="POST">
+                                        <div class="row", style="display: none;">
+                                          
+                                        </div>
+                                        {%- for element in attrLezioni.values() -%}
+                                        {%- if element.insertable -%}
+                                        <div class="row">
+                                            <div class="input-field col s8">
+                                                {%- include "form_element.html" -%}
+                                            </div>
+                                        </div>
+                                        {%- endif -%}
+                                        {%- endfor -%}
+
+
+                                        <button type="submit" class="waves-effect waves-light btn deep-orange darken-3" onclick="">
+                                            Conferma
+                                        </button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                
+
+            </ul>
+        </div>
+
+        {%- endif -%}
 
      
             {%- if lezioni -%}
@@ -32,19 +80,7 @@
             </div>
             {%- endif -%}
 
-            {%- if is_docente -%}
-            <div class="col s11 offset-s1" >
-                <div class="left">
-                    <form action="/aggiungi_lezione" method="POST">
-                        <input name="idcorso" type="number" style="display:none" value="{{ id_corso }}">
-                        <button class="waves-effect waves-light btn deep-orange darken-3 right" type="submit">
-                            aggiungi lezione
-                        </button>
-
-                    </form>
-                </div>
-            </div>
-            {%- endif -%}
+          
 
     </div>
 </div>
