--- a/app/templates/lezioni.html
+++ b/app/templates/lezioni.html
@@ -3,6 +3,8 @@
 
 {%- block head_base -%}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/corsi.css') }}">
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>                      
+       
 {%- endblock -%}
 
 
@@ -11,11 +13,11 @@
 
 <div class="row">
     <div class="col s8 offset-s2">
-              
+       
         <h2>Lezioni</h2>
         {%- if is_docente -%}
         
-
+        
         <div>
 
             <ul class="collapsible expandable popout">
