--- a/app/templates/lezioni_elem.html
+++ b/app/templates/lezioni_elem.html
@@ -29,8 +29,7 @@
                     
                     <div><div class="col s4"><b>Inizio:</b></div><div class="col s8">{{ lezione[1].inizio }}</div></div>
                     <div><div class="col s4"><b>Durata:</b></div><div class="col s8">{{ lezione[1].durata }}</div></div>
-                    <div><div class="col s4"><b>Modalità:</b>  <br><hr>
-                    </div><div class="col s8">{{ lezione[1].modalità }}  <br><hr>
+                    <div><div class="col s4"><b>Modalità:</b>  <br><hr></div><div class="col s8">{{ lezione[1].modalità }}  <br><hr>
                     </div></div>
 
                 
