--- a/app/templates/lezioni_elem.html
+++ b/app/templates/lezioni_elem.html
@@ -1,18 +1,17 @@
 
-   <div>
-        <div class="row" style="margin-bottom: 0px;">
+<div>
+    <div class="row" style="margin-bottom: 0px;">
 
-            <div class="col s11 offset-s1" >
-                <div class="row" >
+        <div class="col s11 offset-s1" >
+            <div class="row" >
            
                   
-                    <div><div class="col s11">
-                    <div class="deep-orange darken-3 left" style="padding: 5px; color: white;">
+                <div>
+                <div class="col s11">
+                <div class="deep-orange darken-3 left" style="padding: 5px; color: white;">
                     {{ lezione[0].titolo }}
-                   
-                
-                    </div>
-                    {%- if is_docente -%}
+                </div>
+                {%- if is_docente -%}
                     <form action="/elimina_lezione" method="POST">
                         <input name="idlezione" type="number" style="display:none" value="{{ lezione[1].id }}">
                         <button type="submit" style="background: transparent; border: none; font-size:0; cursor: pointer">
@@ -20,24 +19,21 @@
                         </button>
                     </form>        
              
-                    {%- endif -%}
+                {%- endif -%}
                     </div>
-                    {%- if lezione[1].idaula -%}
-                        <div><div class="col s4"><b>Edificio:</b></div><div class="col s8">{{lezione[3].nome }}</div></div>
-                        <div><div class="col s4"><b>Aula:</b></div><div class="col s8">{{lezione[2].nome }}</div></div>
-                    {%- endif -%}
-                    
+                {%- if lezione[1].idaula -%}
+                    <div><div class="col s4"><b>Edificio:</b></div><div class="col s8">{{lezione[3].nome }}</div></div>
+                    <div><div class="col s4"><b>Aula:</b></div><div class="col s8">{{lezione[2].nome }}</div></div>
+                {%- endif -%}
                     <div><div class="col s4"><b>Inizio:</b></div><div class="col s8">{{ lezione[1].inizio }}</div></div>
                     <div><div class="col s4"><b>Durata:</b></div><div class="col s8">{{ lezione[1].durata }}</div></div>
                     <div><div class="col s4"><b>Modalità:</b>  <br><hr></div><div class="col s8">{{ lezione[1].modalità }}  <br><hr>
                     </div></div>
 
-                
-                    
-                    
                 </div>
             </div>
-
+            
+      
         </div>
     </div>
  
